# snip

./: Cargo.toml  Readme.md
src/: command.rs  main.rs  store.rs
