[package]
name = "snip"
version = "0.3.1"
authors = ["Daniel McGraw <dan.j.mcgraw@gmail.com>"]
description = "Text snippets on the command line. Inspired by Zach Holman's Boom"
categories = ["cli", "text", "terminal", "command line", "text snippets"]
repository = "https://github.com/danielmcgraw/snip"
license = "GPL-3.0-or-later"
edition = "2018"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
dirs = "3.0"
structopt = "0.3"
cli-clipboard = "0.2"
url = "2.2.2"
webbrowser = "0.5.5"
zip = "0.5"
